--- a/SimpleCost/SimpleCost/Classes/Home/Controller/HomeViewController.xib
+++ b/SimpleCost/SimpleCost/Classes/Home/Controller/HomeViewController.xib
@@ -17,6 +17,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uLN-ab-n1w">
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="0.5" id="izr-M2-blH"/>
+                    </constraints>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2IB-S6-yPh">
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <connections>
@@ -28,9 +34,12 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2IB-S6-yPh" secondAttribute="trailing" id="0SU-kt-orY"/>
-                <constraint firstItem="2IB-S6-yPh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="G9G-ry-ezD"/>
+                <constraint firstItem="uLN-ab-n1w" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Eo9-NT-VV4"/>
+                <constraint firstItem="2IB-S6-yPh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="G9G-ry-ezD"/>
+                <constraint firstAttribute="bottom" secondItem="uLN-ab-n1w" secondAttribute="bottom" id="SP8-Gm-a8s"/>
                 <constraint firstAttribute="bottom" secondItem="2IB-S6-yPh" secondAttribute="bottom" id="ZOd-GQ-gvS"/>
                 <constraint firstItem="2IB-S6-yPh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lCt-ya-fIf"/>
+                <constraint firstItem="uLN-ab-n1w" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="vPo-DN-92P"/>
             </constraints>
         </view>
     </objects>
